--- a/css/index.css
+++ b/css/index.css
@@ -6480,6 +6480,7 @@ footer.card {
 .home .tabs .card .carousel .call-tag {
   font-weight: 700;
   font-size: 1.5rem;
+  line-height: 1.25rem;
   padding: 0.25rem;
   margin-bottom: 1rem;
 }
@@ -6491,7 +6492,7 @@ footer.card {
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
-  line-height: 1rem;
+  line-height: 1.5rem;
   margin-bottom: 2rem;
 }
 .home .tabs .card .carousel .slide p {
@@ -6528,6 +6529,39 @@ footer.card {
 .home .tabs .card .carousel .slide a:hover {
   background-color: #ffff74;
 }
+.home .tabs .card .carousel .slide blockquote p {
+  position: relative;
+  margin: 0 auto;
+  quotes: "“" "”" "‘" "’";
+  padding: 1rem 2rem;
+}
+.home .tabs .card .carousel .slide blockquote p:before {
+  content: open-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: -1rem;
+  position: relative;
+  top: 1rem;
+  color: #ccc;
+  font-size: 3em;
+}
+.home .tabs .card .carousel .slide blockquote p:after {
+  content: close-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: 1rem;
+  position: relative;
+  top: 1.5rem;
+  color: #ccc;
+  font-size: 3em;
+}
+.home .tabs .card .carousel .slide blockquote footer {
+  margin: 0 0 1.5rem;
+  text-align: right;
+  font-style: italic;
+}
 .home .tabs .card .carousel .slide .image {
   width: 100%;
   height: 10rem;
@@ -6536,6 +6570,20 @@ footer.card {
   .home .tabs .card .carousel .slide .image {
     height: 20rem;
   }
+}
+.home .tabs .card .carousel .slide .testimonial {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: inline-block;
+  height: 100%;
+  width: 10rem;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 0.5rem solid #ffffff;
 }
 .home .tabs .card .carousel .slide .image.happy-feeling {
   background: url(../img/happy_feeling.svg) no-repeat center;
@@ -6565,31 +6613,31 @@ footer.card {
   background: url(../img/online_friends.svg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.guillermo {
+.home .tabs .card .carousel .slide .image .guillermo {
   background: url(../img/guillermo_malo.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.marty {
+.home .tabs .card .carousel .slide .image .marty {
   background: url(../img/marty_vessels.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.michaela {
+.home .tabs .card .carousel .slide .image .michaela {
   background: url(../img/michaela_amadeus.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.matheus {
+.home .tabs .card .carousel .slide .image .matheus {
   background: url(../img/matheus_ferrari.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.han {
+.home .tabs .card .carousel .slide .image .han {
   background: url(../img/han_myo_when.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.hyttalo {
+.home .tabs .card .carousel .slide .image .hyttalo {
   background: url(../img/hyttalo_souzen.jpg) no-repeat center;
   background-size: contain;
 }
-.home .tabs .card .carousel .slide .image.josh {
+.home .tabs .card .carousel .slide .image .josh {
   background: url(../img/josh_rodrigo.jpg) no-repeat center;
   background-size: contain;
 }
