--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -93,6 +93,7 @@
         .call-tag
           font-weight: 700
           font-size: 1.5rem
+          line-height: 1.25rem
           padding: .25rem
           margin-bottom: 1rem
         .slide
@@ -102,7 +103,7 @@
             font-size: 2rem
             font-weight: 700
             text-align: center
-            line-height: 1rem
+            line-height: 1.5rem
             margin-bottom: 2rem
           p
             margin: 1rem 0
@@ -117,13 +118,50 @@
             background-color: $secondary-color
             &:hover
               background-color: $secondary-color-light
+          blockquote
+            // border-left: 10px solid #ccc
+            p
+              position: relative
+              margin: 0 auto
+              quotes: "\201C""\201D""\2018""\2019"
+              padding: 1rem 2rem
+              &:before
+                content: open-quote
+                display: inline
+                height: 0
+                line-height: 0
+                left: -1rem
+                position: relative
+                top: 1rem
+                color: #ccc
+                font-size: 3em
+              &:after
+                content: close-quote
+                display: inline
+                height: 0
+                line-height: 0
+                left: 1rem
+                position: relative
+                top: 1.5rem
+                color: #ccc
+                font-size: 3em
+            footer
+              margin: 0 0 1.5rem
+              text-align: right
+              font-style: italic
           .image
             width: 100%
             height: 10rem
             +breakpoint(tablet)
               height: 20rem
           .testimonial
-            //
+            +level1
+            display: inline-block
+            height: 100%
+            width: 10rem
+            margin: 0 auto
+            border-radius: 50%
+            border: .5rem solid $card-bg-color
           .image.happy-feeling
             background: url(../img/happy_feeling.svg) no-repeat center
             background-size: contain
@@ -145,25 +183,25 @@
           .image.online-friends
             background: url(../img/online_friends.svg) no-repeat center
             background-size: contain
-          .image.guillermo
+          .image .guillermo
             background: url(../img/guillermo_malo.jpg) no-repeat center
             background-size: contain
-          .image.marty
+          .image .marty
             background: url(../img/marty_vessels.jpg) no-repeat center
             background-size: contain
-          .image.michaela
+          .image .michaela
             background: url(../img/michaela_amadeus.jpg) no-repeat center
             background-size: contain
-          .image.matheus
+          .image .matheus
             background: url(../img/matheus_ferrari.jpg) no-repeat center
             background-size: contain
-          .image.han
+          .image .han
             background: url(../img/han_myo_when.jpg) no-repeat center
             background-size: contain
-          .image.hyttalo
+          .image .hyttalo
             background: url(../img/hyttalo_souzen.jpg) no-repeat center
             background-size: contain
-          .image.josh
+          .image .josh
             background: url(../img/josh_rodrigo.jpg) no-repeat center
             background-size: contain
         .slide.active
