--- a/css/index.css
+++ b/css/index.css
@@ -6529,35 +6529,40 @@ footer.card {
 .home .tabs .card .carousel .slide a:hover {
   background-color: #ffff74;
 }
+.home .tabs .card .carousel .slide blockquote {
+  border-left: 0.5rem solid #42a5f4;
+}
+@media (min-width: 800px) {
+  .home .tabs .card .carousel .slide blockquote {
+    margin: 1rem 10rem;
+  }
+}
 .home .tabs .card .carousel .slide blockquote p {
   position: relative;
   margin: 0 auto;
   quotes: "“" "”" "‘" "’";
   padding: 1rem 2rem;
 }
-.home .tabs .card .carousel .slide blockquote p:before {
-  content: open-quote;
+.home .tabs .card .carousel .slide blockquote p:before, .home .tabs .card .carousel .slide blockquote p:after {
   display: inline;
   height: 0;
   line-height: 0;
-  left: -1rem;
   position: relative;
-  top: 1rem;
-  color: #ccc;
+  color: #42a5f4;
   font-size: 3em;
+}
+.home .tabs .card .carousel .slide blockquote p:before {
+  content: open-quote;
+  left: -1rem;
+  top: 1rem;
 }
 .home .tabs .card .carousel .slide blockquote p:after {
   content: close-quote;
-  display: inline;
-  height: 0;
-  line-height: 0;
   left: 1rem;
-  position: relative;
   top: 1.5rem;
-  color: #ccc;
-  font-size: 3em;
 }
 .home .tabs .card .carousel .slide blockquote footer {
+  padding: 0 1rem 0 0;
   margin: 0 0 1.5rem;
   text-align: right;
   font-style: italic;
@@ -6579,11 +6584,17 @@ footer.card {
   -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   display: inline-block;
-  height: 100%;
+  height: 10rem;
   width: 10rem;
   margin: 0 auto;
   border-radius: 50%;
   border: 0.5rem solid #ffffff;
+}
+@media (min-width: 800px) {
+  .home .tabs .card .carousel .slide .testimonial {
+    height: 20rem;
+    width: 20rem;
+  }
 }
 .home .tabs .card .carousel .slide .image.happy-feeling {
   background: url(../img/happy_feeling.svg) no-repeat center;
@@ -6827,4 +6838,220 @@ footer.card {
 }
 .about .members .member .bio .social-media a:hover {
   background-color: #ffff74;
+}
+
+.features .header {
+  margin: 0 0 1rem;
+  padding: 4rem 1rem 1rem;
+}
+.features .header div {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.features .header div span {
+  display: block;
+  background: url(../img/stability_ball.svg) no-repeat center;
+  background-size: contain;
+  height: 10rem;
+}
+@media (min-width: 800px) {
+  .features .header div span {
+    height: 20rem;
+  }
+}
+.features .header div p {
+  margin: 1rem auto;
+  weight: 600;
+  font-size: 1.25rem;
+}
+.features article {
+  max-width: 800px;
+  text-align: left;
+  padding: 1rem;
+}
+.features article h1 {
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 0.5rem 0;
+}
+.features article p {
+  padding: 0.5rem 0;
+}
+.features article ul li {
+  padding-left: 0.25rem;
+  margin: 1rem 0 0 0.5rem;
+  list-style: square outside;
+}
+.features article div {
+  width: 100%;
+  height: 10rem;
+}
+@media (min-width: 800px) {
+  .features article div {
+    height: 20rem;
+  }
+}
+.features article .modern-life {
+  background: url(../img/modern_life.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .back-to-school {
+  background: url(../img/back_to_school.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .baby {
+  background: url(../img/baby.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .travelers {
+  background: url(../img/travelers.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .conference {
+  background: url(../img/conference.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .doctors {
+  background: url(../img/doctors.svg) no-repeat center;
+  background-size: contain;
+}
+.features article .authentication {
+  background: url(../img/authentication.svg) no-repeat center;
+  background-size: contain;
+}
+
+.testimonials .header {
+  margin: 0;
+  background-color: #ffd740;
+  padding: 0.25rem;
+}
+.testimonials .header div {
+  margin: 3.5rem 0.5rem 0.5rem;
+  padding: 0.5rem;
+}
+@media (min-width: 800px) {
+  .testimonials .header div {
+    padding: 1rem;
+  }
+}
+.testimonials .header div .header-image {
+  margin-top: 1rem;
+  display: block;
+  background: url("../img/profile_data.svg") no-repeat center;
+  background-size: contain;
+  height: 10rem;
+}
+@media (min-width: 800px) {
+  .testimonials .header div .header-image {
+    height: 20rem;
+  }
+}
+.testimonials .header div p {
+  display: block;
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 0.5rem;
+}
+@media (min-width: 800px) {
+  .testimonials .header div p {
+    font-size: 2rem;
+    padding: 1rem;
+  }
+}
+.testimonials article {
+  padding: 1rem;
+  max-width: 800px;
+  margin: 1rem auto;
+}
+.testimonials article .image {
+  width: 100%;
+  height: 10rem;
+}
+@media (min-width: 800px) {
+  .testimonials article .image {
+    height: 20rem;
+  }
+}
+.testimonials article .image span {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: inline-block;
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50%;
+  border: 0.5rem solid #42a5f4;
+}
+@media (min-width: 800px) {
+  .testimonials article .image span {
+    height: 20rem;
+    width: 20rem;
+  }
+}
+.testimonials article .image .guillermo {
+  background: url(../img/guillermo_malo.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .marty {
+  background: url(../img/marty_vessels.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .michaela {
+  background: url(../img/michaela_amadeus.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .matheus {
+  background: url(../img/matheus_ferrari.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .han {
+  background: url(../img/han_myo_when.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .hyttalo {
+  background: url(../img/hyttalo_souzen.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article .image .josh {
+  background: url(../img/josh_rodrigo.jpg) no-repeat center;
+  background-size: contain;
+}
+.testimonials article blockquote {
+  display: inline-block;
+  padding: 0.5rem;
+  border-left: 0.5rem solid #42a5f4;
+  font-size: 1rem;
+  border-radius: 1rem 0 0 1rem;
+  max-width: 600px;
+}
+.testimonials article blockquote p {
+  position: relative;
+  quotes: "“" "”" "‘" "’";
+  padding: 1rem;
+}
+.testimonials article blockquote p:before, .testimonials article blockquote p:after {
+  display: inline;
+  height: 0;
+  line-height: 0;
+  position: relative;
+  color: #42a5f4;
+  font-size: 3em;
+}
+.testimonials article blockquote p:before {
+  content: open-quote;
+  left: -1rem;
+  top: 1rem;
+}
+.testimonials article blockquote p:after {
+  content: close-quote;
+  left: 1rem;
+  top: 2rem;
+}
+.testimonials article blockquote footer {
+  padding: 0 1rem 0 0;
+  text-align: right;
+  font-style: italic;
 }
