--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -119,33 +119,31 @@
             &:hover
               background-color: $secondary-color-light
           blockquote
-            // border-left: 10px solid #ccc
+            border-left: .5rem solid $primary-color
+            +breakpoint(tablet)
+              margin: 1rem 10rem
             p
               position: relative
               margin: 0 auto
               quotes: "\201C""\201D""\2018""\2019"
               padding: 1rem 2rem
+              &:before, &:after
+                display: inline
+                height: 0
+                line-height: 0
+                position: relative
+                color: $primary-color
+                font-size: 3em
               &:before
                 content: open-quote
-                display: inline
-                height: 0
-                line-height: 0
                 left: -1rem
-                position: relative
                 top: 1rem
-                color: #ccc
-                font-size: 3em
               &:after
                 content: close-quote
-                display: inline
-                height: 0
-                line-height: 0
                 left: 1rem
-                position: relative
                 top: 1.5rem
-                color: #ccc
-                font-size: 3em
             footer
+              padding: 0 1rem 0 0
               margin: 0 0 1.5rem
               text-align: right
               font-style: italic
@@ -155,13 +153,18 @@
             +breakpoint(tablet)
               height: 20rem
           .testimonial
+            // position: relative
             +level1
             display: inline-block
-            height: 100%
+            height: 10rem
             width: 10rem
             margin: 0 auto
             border-radius: 50%
             border: .5rem solid $card-bg-color
+            +breakpoint(tablet)
+              height: 20rem
+              width: 20rem
+              
           .image.happy-feeling
             background: url(../img/happy_feeling.svg) no-repeat center
             background-size: contain
