--- a/sass/_features.sass
+++ b/sass/_features.sass
@@ -18,6 +18,7 @@
         font-size: 1.25rem
   article
     max-width: 800px
+    margin: 1rem auto
     text-align: left
     padding: 1rem 
     h1
